--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-avif": "^1.1.1",
     "gulp-cache": "^1.1.3",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-watch-sass": "^1.4.1",
     "gulp-webp": "^4.0.1",
+    "postcss": "^8.4.19",
     "sass": "^1.55.0"
   }
 }
